# sandbox-meteor

./: .devcontainer.json  .gitattributes  .gitignore  ANDROID_STUDIO_IMPORT.md  API.md  API_REFERENCE.md  APK_BUILD_STATUS.md  ARCHITECTURE.md  App.js  BUILD_FALLBACK_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS_REPORT.md  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  FLASH_CHEM_IMPLEMENTATION_REPORT.md  GEMINI_ALGORITHM_REQUEST.md  GITHUB_BUILD_STATUS.md  GITHUB_UPDATE_REPORT.md  IFLOW.md  INTEGRATION_GUIDE.md  METEOROLOGICAL_SOLVERS_ERROR_ANALYSIS.md  PROJECT_OPTIMIZATION_REPORT.md  README.md  README_METEOROLOGICAL_SANDBOX.md  README_METEOROLOGICAL_TOOLKIT.md  SECURITY.md  STORYLINE_COUNTERFACTUAL.md  app.config.js  app.json  auto_apk.sh  auto_apk_termux.sh  build_all.sh  build_apk.sh  build_enhanced.sh  build_report_v0.0.1.txt  build_verification.sh  build_with_bitrise.sh  commercial_analysis.js  (+49 more)
android-apk/: .devcontainer.json  .gitignore  .trigger_build  ANDROID_STUDIO_BUILD_STEPS.md  BITRISE_SETUP.md  BUILD_FAILED_LOCAL.txt  BUILD_FALLBACK_GUIDE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_simplified.txt  Dockerfile  GITHUB_CODESPACES_BUILD.md  INSTRUCTIONS.md  LOCAL_README.md  PROJECT_OVERVIEW.md  README.md  README_MCP.md  TERMUX_SDK_INSTALL.sh  build.gradle  build_apk.sh  build_fallback.sh  build_log.txt  build_with_bitrise.sh  fix_gh_check.sh  gradle.properties  incremental_build.sh  jni_interface.cc  local.properties  main_60fps.cc  mcp_build.sh  performance_metrics.txt  radiation.h  release.keystore  settings.gradle  simplified-happy-cli.js  simplified_auto_apk.sh  simulate_build.sh  simulated_auto_apk.sh  validation_report.txt  (+1 more)
android-apk/.github/workflows/: build_apk.yml
android-apk/app/: build.gradle  proguard-rules.pro
android-apk/app/src/main/: AndroidManifest.xml
android-apk/app/src/main/cpp/: jni_interface.h
android-apk/app/src/main/java/com/sandbox/radar/: MainActivity.java  SimulationController.java
android-apk/app/src/main/java/com/sandbox/radar/ui/: DashboardView.java  ToolbarView.java
android-apk/app/src/main/res/drawable/: ic_launcher.xml
android-apk/app/src/main/res/values/: strings.xml
android-apk/src/core/: render_loop.cc  sim_loop.cc
android-apk/src/interpolate/: audio_lerp.cc  field_lerp.cc
(+114 files in other folders)
